# mass_town

./: .gitignore  AGENTS.md  INIT.md  README.md  ROADMAP.md  TODO.md  pixi.toml  pyproject.toml
docs/: architecture.md  discipline_interfaces.md  failure_taxonomy.md  roadmap.md  workflow.md
examples/llm_outer_loop_mock_problem/: README.md  config.yaml  design_state.yaml  run_registry.yaml
examples/openmdao_mock_structural_problem/: README.md  config.yaml  design_state.yaml  run_registry.yaml
examples/shell_buckling_bdf_problem/: README.md  config.yaml  design_state.yaml  run_registry.yaml
examples/shell_cantilever_problem/: README.md  config.yaml  design_state.yaml  run_registry.yaml
examples/shell_modal_bdf_problem/: README.md  config.yaml  design_state.yaml  run_registry.yaml
examples/shell_sizing_bdf_multi_case_problem/: README.md  config.yaml  design_state.yaml  run_registry.yaml
plugins/: __init__.py
plugins/gmsh/: KNOWLEDGE.md  (+4 more)
tests/: cantilever_example_utils.py  test_cli.py  test_constraints.py  test_design_variables.py  test_discipline_interfaces.py  test_fea.py  test_meshing.py  test_openmdao_runtime.py  test_optimizer.py  test_outer_loop_runtime.py  test_phase0_baseline.py  test_problem_schema.py  test_shell_buckling_bdf_example.py  test_shell_cantilever_example.py  test_shell_modal_bdf_example.py  test_shell_sizing_bdf_example.py  test_shell_sizing_bdf_multi_case_example.py  test_shell_vs_solid_cantilever_compare.py  test_solid_cantilever_example.py  test_state_manager.py  test_topology.py  test_triage_engine.py  test_workflow_engine.py
(+148 files in other folders)
